[project]
name = "faq-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.21",
    "langchain-google-firestore>=0.5.0",
    "langchain-openai>=0.3.11",
    "python-dotenv>=1.1.0",
    "streamlit>=1.44.0",
    "watchdog>=6.0.0",
]
